Upload de Arquivos Antigos
Apenas para registro.

--- a/ParoquiaEspiritoSanto/Views/Home/Index.cshtml
+++ b/ParoquiaEspiritoSanto/Views/Home/Index.cshtml
@@ -6,3 +6,11 @@
     <h1 class="display-4">Em construção...</h1>
     <p>Aqui ficará um carousel com template fixo e um com template variavel.</p>
 </div>
+
+<div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src=".\img\pes_carousel.jpg" class="d-block w-100%" alt="...">
+        </div>
+    </div>
+</div>
