--- a/ParoquiaEspiritoSanto/Views/Contato/Index.cshtml
+++ b/ParoquiaEspiritoSanto/Views/Contato/Index.cshtml
@@ -6,3 +6,33 @@
     <h1 class="display-4">Em construção...</h1>
     <p>Aqui ficará informações de contato.</p>
 </div>
+
+<table class="table">
+    <thead>
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">Dia</th>
+            <th scope="col">Missa</th>
+            <th scope="col">Horário</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <th scope="row">1</th>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>mdo</td>
+        </tr>
+        <tr>
+            <th scope="row">2</th>
+            <td>Jacob</td>
+            <td>Thornton</td>
+            <td>fat</td>
+        </tr>
+        <tr>
+            <th scope="row">3</th>
+            <td colspan="2">Larry the Bird</td>
+            <td>twitter</td>
+        </tr>
+    </tbody>
+</table>
